upgrade unit test coverage and add jacoco